--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <title>MiniLD70</title>
-    <meta name="viewport" content="width=360, device-width=360">
-    <xmeta name="viewport" content="width=360, device-width=360">
+    <meta name="viewport" content="user-scalable=no, width=360">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -15,8 +14,6 @@
   <body>
     <center>
     <div id="solsort-ui" style=text-align:left;display:inline-block;width:360px></div>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </center>
     <script src=https://unpkg.com/direape@0.2></script>
     <script src=https://unpkg.com/reun@0.2></script>
