update index title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MiniLD70</title>
+    <title>solsort.com - 7 Day Rogue Like - 2017</title>
     <meta name="viewport" content="user-scalable=no, width=360">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
