--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <body>
     <center>
     <div id="solsort-ui" style=text-align:left;display:inline-block;width:360px></div>
+    Simple game engine prototype / UI experiment from scratch, made during 7DRL 2017.
     </center>
     <script src=https://unpkg.com/direape@0.2></script>
     <script src=https://unpkg.com/reun@0.2></script>
