--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   </head>
   <body>
     <center>
-    <div id="solsort-ui" style=text-align:left;display:inline-block;width:360px;height:480px></div>
-    <div>UI experiment and<br>Simple game engine prototype<br>made from scratch<br>during 7DRL 2017.</div>
+    <p>UI experiment and<br>Simple game engine prototype<br>made from scratch<br>during 7DRL 2017.</p>
+    <span id="solsort-ui" style=text-align:left;display:inline-block;width:360px;height:480px></span>
     </center>
     <script src=https://unpkg.com/direape@0.2></script>
     <script src=https://unpkg.com/reun@0.2></script>
