appedit + wesnoth credits

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   </head>
   <body>
     <center>
-    <p>UI experiment and<br>Simple game engine prototype<br>made from scratch<br>during 7DRL 2017.</p>
     <p><span id="solsort-ui" style=text-align:left;display:inline-block;width:360px;height:480px></span></p>
+    <p>Interaction experiment and<br>Simple game engine prototype<br>made from scratch<br>during 7DRL 2017.<br><br>Graphics from Wesnoth<br>Made with <a href=https://appedit.solsort.com/?page=edit&github=solsort/7drl-2017>appedit.solsort.com</a></p>
     </center>
     <script src=https://unpkg.com/direape@0.2></script>
     <script src=https://unpkg.com/reun@0.2></script>
