--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div><span id="solsort-ui" style=text-align:left;display:inline-block;width:360px;height:480px></span></div>
       <p>Interaction experiment and<br>simple game engine prototype<br>made from scratch<br>during 7DRL 2017.</p>
       <p>Objective: kill all the enemies.<br>
-      - easy when you play tactically.</p>
+      - possible when you play tactically.</p>
       <div>
         <p>Works in latest Firefox/Safari/Chrome.<br>
         Designed for landscape-oriented mobile.</p>
