--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
   <body>
     <center>
       <h1>7 day<br>Rogue-like</h1>
+      <p>Objective: kill all the enemies.<br>
+      It is possible if you play tactically.</p>
+      <p>Click where to move / attack.</p>
+      <p>Green bar is energy.<br>Red bar is life</p>
     <div><span id="solsort-ui" style=text-align:left;display:inline-block;width:360px;height:480px></span></div>
       <p>Interaction experiment and<br>simple game engine prototype<br>made from scratch<br>during 7DRL 2017.</p>
-      <p>Objective: kill all the enemies.<br>
-      - possible when you play tactically.</p>
       <div>
         <p>Works in latest Firefox/Safari/Chrome.<br>
         Designed for landscape-oriented mobile.</p>
